--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /InventoryManagementSystem/nbproject/private/
 /InventoryManagementSystem/build/
+/SHBSystem/nbproject/private/
+/InventoryManagementSystem/dist/
